Use precompiled fti on juwels

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,13 +41,12 @@ if (WITH_FTI)
         message(STATUS "FTI will be installed")
         set(FTI_PATH "${CMAKE_INSTALL_PREFIX}/FTI")
         set(FTI_LIBRARY "${FTI_PATH}/${CMAKE_INSTALL_LIBDIR}/libfti.so")  # TIODO: use gnu package to decide automatically between lib64 and lib
-        set(FTI_INCLUDE_DIR "${FTI_PATH}/${CMAKE_INSTALL_INCLUDEDIR}")
+        set(FTI_INCLUDE_DIR "${FTI_PATH}/include")
         set(WITH_FTI TRUE)
     else()
         set(FTI_PATH "" CACHE PATH "Path to FTI")
         find_path(FTI_INCLUDE_DIR NAMES fti.h PATHS ${FTI_PATH}/include)
         find_library(FTI_LIBRARY NAMES libfti.so PATHS ${FTI_PATH}/lib)
-        message("-- found fti (${FTI_LIBRARY})")
     endif()
 
     if (WITH_FTI_THREADS)
