Fix juwels build

--- a/examples/simulation2-pdaf/CMakeLists.txt
+++ b/examples/simulation2-pdaf/CMakeLists.txt
@@ -19,6 +19,8 @@ target_link_libraries(simulation2-pdaf melissa_da_api)
 target_include_directories(simulation2-pdaf PRIVATE ${CMAKE_BINARY_DIR}/include)
 
 
+set_target_properties(simulation2-pdaf PROPERTIES LINK_FLAGS "-nostartfiles")
+
 INSTALL(TARGETS simulation2-pdaf RUNTIME DESTINATION bin)
 #${CMAKE_CURRENT_SOURCE_DIR}/test.sh
 
