--- a/melissa_da_set_env.sh.in
+++ b/melissa_da_set_env.sh.in
@@ -11,6 +11,8 @@ export MELISSA_DA_PATH=@CMAKE_INSTALL_PREFIX@
 export MELISSA_DA_SOURCE_PATH=@CMAKE_SOURCE_DIR@
 export MELISSA_DA_DATADIR=@DATADIR_INSTALL@
 export MELISSA_DA_WITH_FTI=@WITH_FTI@
+
+export MELISSA_DA_WITH_FTI_CHECKOINT_DA_SERVER=@WITH_FTI_CHECKOINT_DA_SERVER@
 export MELISSA_DA_REPORT_TIMING=@REPORT_TIMING@
 
 export MELISSA_DA_COMM4PY_PATH=@CMAKE_INSTALL_PREFIX@/@CMAKE_INSTALL_LIBDIR@/libmelissa_comm4py.so
