--- a/common/melissa_da_config.h.in
+++ b/common/melissa_da_config.h.in
@@ -5,4 +5,5 @@
 #cmakedefine RUNNERS_MAY_CRASH
 #cmakedefine SLOW_MPI
 #cmakedefine SLOW_MPI_DIR "@SLOW_MPI_DIR@"
+#cmakedefine WITH_FTI_CHECKOINT_DA_SERVER
 
