Refactoring, simplify run_melissa_da_study calls by adding is_p2p flag

--- a/share/CMakeLists.txt
+++ b/share/CMakeLists.txt
@@ -1,4 +1,6 @@
 if (WITH_FTI)
     install(FILES config.fti
         DESTINATION ${DATADIR_INSTALL})
+    install(FILES config-p2p-runner.fti
+        DESTINATION ${DATADIR_INSTALL})
 endif()
