added lorenz with melissa-p2p

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory(simulation2-pdaf)
 add_subdirectory(simulation3-empty)
 add_subdirectory(simulation5-python)
 add_subdirectory(p2p)
+add_subdirectory(lorenz)
