--- a/api/CMakeLists.txt
+++ b/api/CMakeLists.txt
@@ -19,8 +19,8 @@ file(GLOB
      p2p/StorageController/*.cxx
      )
     
- find_package(Protobuf REQUIRED)
- include_directories(${Protobuf_INCLUDE_DIRS})
+ # find_package(Protobuf REQUIRED)
+ # include_directories(${Protobuf_INCLUDE_DIRS})
 
  add_library(melissa_da_api SHARED
      ${ALL_API}
@@ -30,7 +30,7 @@ file(GLOB
 )
  
 target_link_libraries(melissa_da_api PUBLIC melissa_protocol)
-target_link_libraries(melissa_da_api PUBLIC ${Protobuf_LIBRARY})
+#target_link_libraries(melissa_da_api PUBLIC ${Protobuf_LIBRARY})
 
 if(INSTALL_ZMQ)
    add_dependencies(melissa_da_api ZeroMQ)
