Add corrected fti lib path to setenv

--- a/melissa_da_set_env.sh.in
+++ b/melissa_da_set_env.sh.in
@@ -1,7 +1,7 @@
 export PATH=@CMAKE_INSTALL_PREFIX@/bin:$PATH
 export LD_LIBRARY_PATH=@ZeroMQ_INCLUDE_DIR@/../lib:$LD_LIBRARY_PATH
 export LD_LIBRARY_PATH=@CMAKE_INSTALL_PREFIX@/lib:$LD_LIBRARY_PATH
-export LD_LIBRARY_PATH=@FTI_PATH@/lib:$LD_LIBRARY_PATH
+export LD_LIBRARY_PATH=@FTI_PATH@/@CMAKE_INSTALL_LIBDIR@:$LD_LIBRARY_PATH
 export PDAF_PATH=@PDAF_PATH@
 
 export MELISSA_DA_DATASET_PATH=@PDAF_PATH@/tutorial/inputs_online/
