Add python simulation api
Now one can even write simulations in python

--- a/api/CMakeLists.txt
+++ b/api/CMakeLists.txt
@@ -31,3 +31,6 @@ install(TARGETS melissa_da_api LIBRARY DESTINATION lib)
 
 install(FILES melissa_da_api.h DESTINATION include)
 install(FILES ${CMAKE_BINARY_DIR}/include/melissa_da_api.f90 DESTINATION include)
+
+
+install(FILES melissa_da_api.py DESTINATION share/melissa-da/python)
