--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -6,3 +6,4 @@ endfunction()
 add_subdirectory(simulation1)
 add_subdirectory(simulation2-pdaf)
 add_subdirectory(simulation3-empty)
+add_subdirectory(simulation5-python)
