--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,33 +70,36 @@ endif()
 
 # Boost headers only for udp
 
-#ExternalProject_Add(Boost
-    #URL https://dl.bintray.com/boostorg/release/1.67.0/source/boost_1_67_0.zip
-    ##PATCH_COMMAND ""
+option(INSTALL_BOOST "Download and install a good version of boost" ON)
+if(INSTALL_BOOST)
+    message("installing boost")
+    ExternalProject_Add(BOOST
+        URL https://dl.bintray.com/boostorg/release/1.64.0/source/boost_1_64_0.zip
+        #PATCH_COMMAND ""
 
-    #PREFIX "${CMAKE_CURRENT_BINARY_DIR}/Boost"
+        PREFIX "${CMAKE_CURRENT_BINARY_DIR}/BOOST"
 
-    ##SOURCE_DIR ${CMAKE_CURRENT_BINARY_DIR}/Boost-src
+        #SOURCE_DIR ${CMAKE_CURRENT_BINARY_DIR}/Boost-src
 
-    #DOWNLOAD_NO_EXTRACT TRUE
+        DOWNLOAD_NO_EXTRACT TRUE
 
-    #CONFIGURE_COMMAND ""
-    #BUILD_COMMAND ""
-    #INSTALL_COMMAND unzip "${CMAKE_CURRENT_BINARY_DIR}/Boost/src/boost_1_67_0.zip" "boost_1_67_0/boost/*" -d install
-
-
-    #TEST_COMMAND ""
-
-    #LOG_DOWNLOAD 1
-    #LOG_CONFIGURE 1
-    #LOG_INSTALL 1
-#)
+        CONFIGURE_COMMAND ""
+        BUILD_COMMAND ""
+        INSTALL_COMMAND unzip "${CMAKE_CURRENT_BINARY_DIR}/BOOST/src/boost_1_64_0.zip"
+          "boost_1_64_0/boost/*" -d install
 
 
-#set(BOOST_ROOT "${CMAKE_CURRENT_BINARY_DIR}/src/Boost-build/install/boost_1_67_0")
-#set(Boost_INCLUDE_DIR "${CMAKE_CURRENT_BINARY_DIR}/src/Boost-build/install/boost_1_67_0")
-#set(Boost_INCLUDE_DIR "${CMAKE_CURRENT_BINARY_DIR}/Boost/src/ex-Boost1234/boost_1_67_0/boost")
-find_package(Boost COMPONENTS system)
+        TEST_COMMAND ""
+
+        LOG_DOWNLOAD 1
+        LOG_CONFIGURE 1
+        LOG_INSTALL 1
+        )
+    set(Boost_INCLUDE_DIRS "${CMAKE_CURRENT_BINARY_DIR}/BOOST/src/BOOST-build/install/boost_1_64_0/")
+    message("Boost_INCLUDE_DIRS: ${Boost_INCLUDE_DIRS}")
+else()
+    find_package(Boost COMPONENTS system)
+endif()
 
 
 
