Speed up server using  asimple listscheduling with prefetching strategy
This strategy compromises the following few rules (see
p2p-scheduling.ipynb for more, this is motivated by some theoretical
experiments):

    job request: schedule a job that was set as next job. if none: always a job who's input state is on the
    runner already.
        if not possible take a random job --> O(#state cache * #unscheduled jobs)
    Prefetch request: select a job that will be set as the next job for
    this runner. selection as in job request
    delete request: here we want to be intelligent...
        delete state that is too old --> O(#state cache)
        delete state that is not important for any job this iteration anymore --> O(#state cache * #unscheduled jobs) , hashmaps might help?
        delete state that is too new --> O(#state cache)
        delete something randomly (assuming again importance calculation would take too long)
    delete: go only once over the state cache list and put it in categories --> O(#state cache)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,7 +70,7 @@ endif()
 
 # Boost headers only for udp
 
-option(INSTALL_BOOST "Download and install a good version of boost" ON)
+option(INSTALL_BOOST "Download and install a good version of boost" OFF)
 if(INSTALL_BOOST)
     message("installing boost")
     ExternalProject_Add(BOOST
