--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -7,5 +7,5 @@ add_subdirectory(simulation1)
 add_subdirectory(simulation2-pdaf)
 add_subdirectory(simulation3-empty)
 add_subdirectory(simulation5-python)
-add_subdirectory(p2p)
+add_subdirectory(simulation4-p2p)
 add_subdirectory(lorenz)
