--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -14,3 +14,13 @@ endif(INSTALL_ZMQ)
 target_compile_options(melissa_common BEFORE PUBLIC -fPIC)
 
 install(FILES melissa_da_stype.h DESTINATION include)
+
+
+# comm4py
+
+add_library(melissa_comm4py SHARED comm4py.c)
+target_link_libraries(melissa_comm4py PUBLIC zmq)
+install(
+    TARGETS melissa_comm4py
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+)
