Improve regex for PDAF version detection to be compatibe with "1.16"

--- a/pdaf-core/CMakeLists.txt
+++ b/pdaf-core/CMakeLists.txt
@@ -27,7 +27,7 @@ endif()
 # try to determine PDAF version
 file(
     STRINGS ${PDAF_PATH}/src/PDAF-D_print_version.F90 raw_pdaf_version
-    REGEX "Version [0-9]+[.][0-9]+[.][0-9]+"
+    REGEX "Version [0-9]+[.][0-9]+([.][0-9]+)*"
 )
 
 if(NOT raw_pdaf_version)
