Fix comm4py path

--- a/melissa_da_set_env.sh.in
+++ b/melissa_da_set_env.sh.in
@@ -13,6 +13,8 @@ export MELISSA_DA_DATADIR=@DATADIR_INSTALL@
 export MELISSA_DA_WITH_FTI=@WITH_FTI@
 export MELISSA_DA_REPORT_TIMING=@REPORT_TIMING@
 
+export MELISSA_DA_COMM4PY_PATH=@CMAKE_INSTALL_PREFIX@/@CMAKE_INSTALL_LIBDIR@/libmelissa_comm4py.so
+
 export MPIEXEC=@MPIEXEC@
 
 export PYTHONPATH=@CMAKE_INSTALL_PREFIX@/share/melissa-da/python:$PYTHONPATH
