--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,7 +86,8 @@ IF(CMAKE_Fortran_COMPILER_ID STREQUAL "Intel")
     set(CMAKE_CXX_FLAGS_DEBUG "-g -rdynamic -traceback -std=c++14")
     set(CMAKE_Fortran_FLAGS_DEBUG "-g -rdynamic -traceback")
 ELSE()
-    set(CMAKE_Fortran_FLAGS "-fdefault-real-8 -m64")
+    #set(CMAKE_Fortran_FLAGS "-fdefault-real-8 -m64")
+    set(CMAKE_Fortran_FLAGS "-CcdRR8 -m64")
     set(COMPILER_DEPENDENT_FORTRAN_FLAGS "-fwhole-file  -fcheck=all  -pedantic  -fbacktrace -Wextra -Wall  -Wline-truncation  -Wcharacter-truncation  -Wsurprising  -Waliasing  -Wimplicit-interface  -Wunused-parameter")
 endif()
 
