running (buggy) on fugaku - deadlock in lorenz example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,7 @@ if (WITH_FTI)
             GIT_PROGRESS TRUE
             PREFIX ${CMAKE_CURRENT_BINARY_DIR}/FTI
             CMAKE_ARGS -DENABLE_TESTS=0 -DENABLE_EXAMPLES=0 -DENABLE_HDF5=0
-            -DHDF5_ROOT=${HDF5_ROOT}
+            -DHDF5_ROOT=${HDF5_ROOT} -DCMAKE_C_FLAGS=-fPIC -DCMAKE_CXX_FLAGS=-fPIC -DCMAKE_Fortran_FLAGS=fPIC
             -DCMAKE_INSTALL_PREFIX:PATH=${CMAKE_INSTALL_PREFIX}/FTI
             -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE})
         message(STATUS "FTI will be installed")
