--- a/examples/lorenz/CMakeLists.txt
+++ b/examples/lorenz/CMakeLists.txt
@@ -1,5 +1,7 @@
 
 add_executable(simulation-lorenz lorenz.cxx)
+#target_compile_options(simulation-lorenz PRIVATE -Nclang -fsanitize=address -fsanitize-recover=address)
+#target_link_options(simulation-lorenz PRIVATE -Nclang -fsanitize=address -fsanitize-recover=address)
 target_link_libraries(simulation-lorenz melissa_da_api)
 # TODO: do we need to link against python too if using python interface?
 INSTALL(TARGETS simulation-lorenz RUNTIME DESTINATION bin)
