--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -3,9 +3,9 @@ function(python_test test_name)
     add_test(NAME ${test_name} COMMAND ${in_env} python3 -u ./tests.py ${test_name} WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 endfunction()
 
-add_subdirectory(simulation1)
-#add_subdirectory(simulation2-pdaf)
-add_subdirectory(simulation3-empty)
-add_subdirectory(simulation5-python)
-add_subdirectory(simulation4-p2p)
+#add_subdirectory(simulation1)
+##add_subdirectory(simulation2-pdaf)
+#add_subdirectory(simulation3-empty)
+#add_subdirectory(simulation5-python)
+#add_subdirectory(simulation4-p2p)
 add_subdirectory(lorenz)
